--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# AWS API Gateway Configuration
+VITE_AWS_API_GATEWAY_URL=https://your-api-id.execute-api.region.amazonaws.com/stage
 
-# AWS Credentials for Polly (set these in your Supabase project settings)
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# Optional: AWS Region (for reference)
 AWS_REGION=us-east-1
+
+# Development Configuration
+VITE_APP_NAME=Text-to-Speech Converter
+VITE_APP_VERSION=1.0.0
