--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-# AWS API Gateway Configuration
-VITE_AWS_API_GATEWAY_URL=https://your-api-id.execute-api.region.amazonaws.com/stage
-
-# Optional: AWS Region (for reference)
-AWS_REGION=us-east-1
+# Text-to-Speech API Configuration
+VITE_TTS_API_URL=https://56j25k9zmd.execute-api.eu-north-1.amazonaws.com
 
 # Development Configuration
 VITE_APP_NAME=Text-to-Speech Converter
