--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Text-to-Speech API Configuration
-VITE_TTS_API_URL=https://56j25k9zmd.execute-api.eu-north-1.amazonaws.com
+VITE_TTS_API_URL=https://your-api-gateway-url.execute-api.region.amazonaws.com
 
 # Development Configuration
 VITE_APP_NAME=Text-to-Speech Converter
